--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
     <title>Baldragon News</title>
-    <link rel="shortcut icon" type="image/png" href="/icons/baldragon.png">
+    <link rel="shortcut icon" type="image/png" href="/img/baldragon.png">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav class="main">
-      <img src="/icons/baldragon.png" width="120px"><h1 class="bda">Baldragon<br>News</h1>
+      <img src="/img/baldragon.png" width="120px"><h1 class="bda">Baldragon<br>News</h1>
     </nav>
     <center>
       <h1 class="hdr">Most Important News</h1>
