--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     </nav>
     <center>
       <h1 class="hdr">Most Important News</h1>
-      <div class="news"></div>
+      <div class="news">
+        <img src="img/id-1.png" class="newsimg">
+      </div>
+      <h1 class="hdr">Most Important News</h1>
+      <p>Nothing here... Check again later!</p>
     </center>
   </body>
 </html>
