--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="news">
         <img src="img/id-1.png" class="newsimg">
       </div>
-      <h1 class="hdr">Most Important News</h1>
+      <h1 class="hdr">Most Recent News</h1>
       <p>Nothing here... Check again later!</p>
     </center>
   </body>
