--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <nav class="main">
       <img src="/img/baldragon.png" width="120px"><h1 class="bda">Baldragon<br>News</h1>
     </nav>
-    <center>
       <h1 class="hdr">Most Important News</h1>
+    <center>
       <div class="news">
         <img src="img/id-1.png" class="newsimg">
+        <div class="text">
+          <h1 class="newsh">Main Header</h1>
+          <p class="newsp">big</p>
+        </div>
       </div>
+    </center>
       <h1 class="hdr">Most Recent News</h1>
       <p>Nothing here... Check again later!</p>
-    </center>
   </body>
 </html>
