--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="img/id-1.png" class="newsimg">
         <div class="text">
           <h1 class="newsh">Main Header</h1>
-          <p class="newsp">big</p>
+          <p class="newsp">Paragraph</p>
         </div>
       </div>
     </center>
