--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
           <h1 class="newsh">Main Header</h1>
           <p class="newsp">Paragraph</p>
         </div>
+        <div class="timestamp">
+          <p class="newsts">Posted on 24/02/2024, 4:45PM.</p>
+        </div>
+        </div>
       </div>
     </center>
       <h1 class="hdr">Most Recent News</h1>
