--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <img src="/img/baldragon.png" width="120px">
       <h1 class="bda">Baldragon<br>News</h1>
       <div class="containerbutton">
-        <button>Button 3</button>
-        <button>Button 2</button>
-        <button>Button 1</button>
+        <button class="mainb">Button 3</button>
+        <button class="mainb">Button 2</button>
+        <button class="mainb">Button 1</button>
       </div>
     </nav>
       <h1 class="hdr">Most Important News</h1>
