--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
     </center>
       <h1 class="hdr">Most Recent News</h1>
       <p>Nothing here... Check again later!</p>
+    <div class="containerfoot">
+      <p class="newsft">Made by a student in Baldragon. (Callum T.) &lt;3</p>
+    </div>
   </body>
 </html>
