--- a/index.html
+++ b/index.html
@@ -5,33 +5,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <nav class="main">
-      <img src="/img/baldragon.png" width="120px">
-      <h1 class="bda">Baldragon<br>News</h1>
-      <div class="containerbutton">
-        <button class="mainb">Button 3</button>
-        <button class="mainb">Button 2</button>
-        <button class="mainb">Button 1</button>
-      </div>
-    </nav>
-    <center>
-      <h1 class="hdr">Most Important News</h1>
-      <div class="news">
-        <img src="img/id-1.png" class="newsimg">
-        <div class="text">
-          <h1 class="newsh">Main Header</h1>
-          <p class="newsp">Paragraph</p>
-        </div>
-        <div class="timestamp">
-          <p class="newsts">Posted on 24/02/2024, 4:45PM.</p>
-        </div>
-        </div>
-      </div>
-      <h1 class="hdr">Most Recent News</h1>
-      <p>Nothing here... Check again later!</p>
-    </center>
-    <div class="containerfoot">
-      <p class="newsft">Made by a student in Baldragon. (Callum T.) &lt;3</p>
+    <div class="center">
+      <nav>
+        <img class="logo" src="/img/baldragon.png" width="120px">
+        <h1 class="navheader">Baldragon News</h1>
+      </nav>
     </div>
   </body>
 </html>
