--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="center">
       <nav>
-        <img class="logo" src="/img/baldragon.png" width="100vw">
+        <img class="logo" src="/img/baldragon.png">
         <h1 class="navheader">Baldragon News</h1>
       </nav>
     </div>
